# urc-cv

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
datasets/: README.md
docs/: ARCHITECTURE.md  GETTING_STARTED.md  GLOSSARY.md  OPERATIONS.md  PRESENTATION.md  README.md  TEAM_GUIDE.md
models/: README.md
ros2_ws/src/aruco_detector/: package.xml  setup.py
ros2_ws/src/aruco_detector/aruco_detector/: detector_node.py
ros2_ws/src/object_approach/: package.xml  setup.py
ros2_ws/src/object_approach/object_approach/: approach_node.py
ros2_ws/src/object_detector/: package.xml  setup.py
ros2_ws/src/object_detector/object_detector/: object_detector_node.py
ros2_ws/src/search_behavior/: package.xml  setup.py
ros2_ws/src/search_behavior/search_behavior/: search_node.py
ros2_ws/src/urc_autonomy/: package.xml  pytest.ini  setup.cfg  setup.py
ros2_ws/src/urc_autonomy/config/: ekf.yaml  field_params.yaml  nav2_params.yaml  twist_mux.yaml
ros2_ws/src/urc_autonomy/launch/: autonomy.launch.py
ros2_ws/src/urc_autonomy/test/: conftest.py  test_estop.py  test_helpers.py  test_mission_state_machine.py  test_visual_servo.py
ros2_ws/src/urc_autonomy/urc_autonomy/: estop_node.py  mission_node.py  telemetry_node.py  waypoint_loader.py
ros2_ws/src/urc_localization/: package.xml  setup.py
ros2_ws/src/urc_localization/config/: rtabmap.yaml
ros2_ws/src/urc_localization/launch/: visual_odom.launch.py
ros2_ws/src/urc_localization/urc_localization/: gps_odom_node.py
ros2_ws/src/urc_simulation/: package.xml  setup.py
ros2_ws/src/urc_simulation/config/: sim.rviz  sim_bridge.yaml
ros2_ws/src/urc_simulation/launch/: sim.launch.py
ros2_ws/src/urc_simulation/urdf/: rover.urdf.xacro
ros2_ws/src/urc_simulation/worlds/: urc_field.world
ros2_ws/src/visual_servo/: package.xml  setup.py
ros2_ws/src/visual_servo/visual_servo/: servo_node.py
scripts/: build_dev.sh  collect_data.sh  extract_frames.py  load_waypoints.sh  run_stack.sh  status.sh  tune.sh
tools/: mac_stress.py
training/: README.md  augment.py  data.yaml  export.py  train.py  validate.py
waypoints/: example_waypoints.json
